--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,10 @@ install:
     # verify both requirements were met
     - INSTALLDIR=$(python -c "import os; import numpy; print(os.path.dirname(numpy.__file__))")
 
-    # Fix distribute
-    - wget http://python-distribute.org/distribute_setup.py
-    - python distribute_setup.py
+    # check easy_install version
+    - easy_install --version
+    - pip install --upgrade setuptools
+    - easy_install --version
 
     # webp - compiling from source
     - wget "https://webp.googlecode.com/files/libwebp-0.4.0.tar.gz" -O libwebp-0.4.0.tar.gz
