--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
     - sudo ldconfig
 
     # install python requirements
-    - pip install -r test_requirements.txt --use-mirrors
+    - pip install -r test_requirements.txt
 
     # verify both requirements were met
     - INSTALLDIR=$(python -c "import os; import thumbor; print(os.path.dirname(thumbor.__file__))")
